# claude-flow

python-claude-flow/: README.md  STATUS.md  demo.py  install.bat  install.py  install.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py  test_basic.py  test_imports.py
python-claude-flow/examples/: basic_usage.py
python-claude-flow/src/claude_flow/: __init__.py
python-claude-flow/src/claude_flow/cli/: __init__.py  commands.py  main.py
python-claude-flow/src/claude_flow/core/: __init__.py  config.py  config_simple.py  event_bus.py  event_bus_simple.py  logger.py
python-claude-flow/src/claude_flow/mcp/: __init__.py  mcp_client.py
python-claude-flow/tests/: test_basic.py
